# imgui_chain_processing

./: .gitignore  CMakeLists.txt  README.adoc  application.h  imgui.ini  main.cpp  meson.build
.cache/clangd/index/: ImNodeFlow.cpp.02353C8A7768D3C6.idx  ImNodeFlow.cpp.B09537B9540198A2.idx  ImNodeFlow.h.1A5897DD4FED78F1.idx  ImNodeFlow.h.40D697EF868739B7.idx  ImNodeFlow.inl.B57225B47BCC696C.idx  ImNodeFlow.inl.DA3369BB05EC4D95.idx  application.h.0A2A04DD891FE093.idx  color_node_editor.cpp.E86CC7E0EB45340A.idx  context_wrapper.h.3F57A961F27580EB.idx  context_wrapper.h.A5998A916071FE8B.idx  crude_json.cpp.D584D6162E8F8C07.idx  crude_json.h.6A2555C1CC2619DF.idx  example.hpp.43B30055D8761782.idx  graph.h.79EE49CD97AB6523.idx  imconfig.h.0D617AD804C416C3.idx  imgui.cpp.FEB9D3FC89ED4F63.idx  imgui.h.F5A4483E005072DA.idx  imgui_bezier_math.h.62392C5782D2EC74.idx  imgui_bezier_math.h.7366E984E8FD05AF.idx  imgui_bezier_math.inl.144D4F3FA013B051.idx  imgui_bezier_math.inl.6E78E517D9559808.idx  imgui_canvas.cpp.E5BF6FDC7411C8AD.idx  imgui_canvas.h.64C18332B669CC75.idx  imgui_demo.cpp.D834D0B8148EB14F.idx  imgui_draw.cpp.DCAC05B00039DD9D.idx  imgui_extra_math.h.573166337EC0A239.idx  imgui_extra_math.h.D27193F26941F1E5.idx  imgui_extra_math.inl.2923A33217DE1EF2.idx  imgui_extra_math.inl.33FE888C7C118C8F.idx  imgui_impl_opengl3.cpp.282B4A8AB6D2D768.idx  imgui_impl_opengl3.h.973D17D0F441E0B1.idx  imgui_impl_opengl3_loader.h.D0EA55BA88AEBA9B.idx  imgui_impl_sdl2.cpp.7D8B6B2A4EED992B.idx  imgui_impl_sdl2.h.14D83FC55E374206.idx  imgui_impl_sdl3.cpp.D3CE6D557B8B95FE.idx  imgui_impl_sdl3.h.4242A917EA3D2286.idx  imgui_internal.h.DAEFBD5121828B43.idx  imgui_node_editor.cpp.20DF3B90869A798B.idx  imgui_node_editor.h.C812208CFB325D0F.idx  imgui_node_editor_api.cpp.ED03319F198120EF.idx  (+18 more)
lib/: ImNodeFlow.cpp  ImNodeFlow.h  imconfig.h  imgui_bezier_math.inl  imgui_extra_math.h  imgui_extra_math.inl  meson.build
src/: application.cpp  application.hpp  example.hpp  main.cpp
src/image/: image.hpp
src/nodes/: Image2Gray.hpp  ImageIn.hpp  ImageShow.hpp  result.hpp  simple.hpp
